# todo_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: auth.py  todos.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: todo.py  user.py
app/schemas/: todo.py  token.py  user.py
tests/: conftest.py  test_auth.py  test_todos.py
